--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/gabrielhz/inventorymanager/issues"
   },
-  "homepage": "https://github.com/gabrielhz/inventorymanager#readme"
+  "homepage": "https://github.com/gabrielhz/inventorymanager#readme",
+  "dependencies": {
+    "@types/express": "^4.17.21",
+    "uuidv4": "^6.2.13"
+  }
 }
